frontend-mvc/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-mvc
  name: frontend-mvc
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: frontend-mvc
  template:
    metadata:
      labels:
        app: frontend-mvc
    spec:
      containers:
        - name: frontend-mvc
          image: roelvandegrint.azurecr.io/study-buddy/frontend-mvc:latest
          ports:
            - name: http
              containerPort: 8080
      imagePullSecrets:
        - name: roelvandegrint.azurecr.io
