frontend-mvc/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-mvc
  labels:
    app: frontend-mvc
spec:
  selector:
    app: frontend-mvc
  ports:
    - name: http
      port: 80
      targetPort: 8080
